fix: add styles for anchor images to center align and display as block

--- a/include/style/article.styl
+++ b/include/style/article.styl
@@ -87,6 +87,11 @@ article
                 footer
                     strong + cite
                         margin-left: .5em
+            
+            a
+                img
+                    margin: auto
+                    display: block
 
             .message.message-immersive
                 border-radius: 0
@@ -196,3 +201,4 @@ a
             flex-shrink: 1
             word-wrap: break-word
             white-space: normal
+
